--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@types/classnames": "^2.3.1",
     "@umijs/test": "^3.0.5",
+    "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "dumi": "^1.0.16",
     "father-build": "^1.17.2",
