--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "private": false,
   "name": "zero-ui-react",
   "version": "0.0.1",
-  "files": ["dist/*"],
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "start": "dumi dev",
     "docs:build": "dumi build",
@@ -36,20 +38,22 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@umijs/plugin-sass": "^1.1.1",
+    "axios": "^0.21.1",
+    "classnames": "^2.3.1",
     "node-sass": "npm:dart-sass@1.25.0",
     "react": "^17.0.2",
-    "classnames": "^2.3.1",
-    "axios": "^0.21.1",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/classnames": "^2.3.1",
+    "@types/react-transition-group": "^4.4.2",
     "@umijs/test": "^3.0.5",
     "dumi": "^1.0.16",
     "father-build": "^1.17.2",
     "gh-pages": "^3.0.0",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.1",
+    "react-transition-group": "^4.4.2",
     "yorkie": "^2.0.0"
   }
 }
