--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "private": false,
   "name": "zero-ui-react",
   "version": "0.0.1",
+  "jest": {
+    "coveragePathIgnorePatterns": [
+      "/src/.umi/"
+    ]
+  },
   "files": [
     "dist/*"
   ],
@@ -14,6 +19,7 @@
     "release": "npm run build && npm publish",
     "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\"",
     "test": "umi-test",
+    "jest-c": "react-scripts test --coverage",
     "test:coverage": "umi-test --coverage"
   },
   "main": "dist/index.js",
@@ -42,10 +48,14 @@
     "classnames": "^2.3.1",
     "node-sass": "npm:dart-sass@1.25.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-scripts": "^5.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@types/classnames": "^2.3.1",
+    "@types/jest": "^27.4.1",
     "@types/react-transition-group": "^4.4.2",
     "@umijs/test": "^3.0.5",
     "dumi": "^1.0.16",
